--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "chart.js": "^2.7.1",
+    "moment-timezone": "^0.5.14",
     "vue": "^2.5.2",
+    "vue-chart-js": "^1.4.1",
+    "vue-chartjs": "^3.1.0",
+    "vue-moment": "^3.1.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "vuex-router-sync": "^5.0.0"
